objects/Opportunity_Additional_Attribute__c.object
<CustomObject>
    <fields>
        <fullName>Attribute_Value__c</fullName>
        <label>Attribute Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Definition_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Definition Name</label>
        <referenceTo>Lead_Additional_Attribute_Definition__c</referenceTo>
        <relationshipLabel>Opportunity Additional Attributes</relationshipLabel>
        <relationshipName>Opportunity_Additional_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Id</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Additional Attributes</relationshipLabel>
        <relationshipName>Opportunity_Additional_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Additional Attribute</label>
    <nameField>
        <label>Opportunity Additional Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Additional Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>